tests/paczka1/fuzzy1/70317558.err
Error in line 3: cPueXgbp A231 37,1
Error in line 5: E1QFd5zvn94 A579 81,6
Error in line 11: ANf3x8 A579 75,1
Error in line 4: cPueXgbp A759 99,2
Error in line 20: jfR A759 17,7
Error in line 25: jfnR A759 -1,5
Error in line 18: cPueXgbp S682 11,2
Error in line 30: E1QFd5zvn94 S682 60,74
